--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   <!-- H1
   Creates a universal H1 website title display at the top of every page. -->
     <h1 style="font-size: 650%; font-weight: bolder; top: 50px;"> PsyTech UX </h1>
+    <h2 style="font-size: 150%; font-weight: bold;">by Xenia Lechler</h2>
   <!-- TEXT SCROLL ANIMATION
   Creates an animated text scroll container for the home page. -->
     <div id="scroll-container">
@@ -49,9 +50,9 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   <!-- PAGE DIVIDER
   Adds a solid-line page divider to the home page. -->
     <hr class="solid">
-  <!-- Creates the parameters for H4 -->
-  <h4 style="background-color: e0ffff; font-size: 400%;"> The roots of research grow from human-centered thinking. </h4>
   </header>
+<!-- Creates the parameters for H4 -->
+<h4 style="background-color: e0ffff; font-size: 400%;"> Welcome, I am happy you are here to learn more about my work. </h4>
 <!-- SUBJECT CARDS FOR ABOUT PAGE
 Creates sections to house content in the aboout page. -->
   <section id="about">
@@ -69,7 +70,7 @@ Creates sections to house content in the aboout page. -->
     <!-- SUBJECT #1: Human-Subjects Research (IRB) -->
     <div class="subject">
       <!-- Creates the parameters for H4 -->
-      <h4 style="background-color: e0ffff; font-size: 150%; float: left; font-weight: bold;"> Human-centered design thinking </h4>
+      <h4 style="background-color: e0ffff; font-size: 150%; float: left; font-weight: bold;"> Human-centered mission statement </h4>
       <p>My experience in IRB research and human subjects research encompasses a comprehensive understanding of ethical considerations and 
       protocols governing research involving human participants. With a background in statistical analysis, I've applied rigorous methodologies
       to ensure the integrity and validity of research outcomes. This expertise extends to designing studies, obtaining IRB approvals, recruiting 
