--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   <!-- H1
   Creates a universal H1 website title display at the top of every page. -->
     <h1 style="font-size: 650%; font-weight: bolder; top: 50px;"> PsyTech UX </h1>
+    <h2 style="font-size: 150%; font-weight: bold;">by Xenia Lechler</h2>
   <!-- TEXT SCROLL ANIMATION
   Creates an animated text scroll container for the home page. -->
     <div id="scroll-container">
