--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   <!-- H1
   Creates a universal H1 website title display at the top of every page. -->
     <h1 style="font-size: 650%; font-weight: bolder; top: 50px;"> PsyTech UX </h1>
+    <h2 style="font-size: 150%; font-weight: bold;">by Xenia Lechler</h2>
   <!-- TEXT SCROLL ANIMATION
   Creates an animated text scroll container for the home page. -->
     <div id="scroll-container">
@@ -52,30 +53,37 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
     <hr class="solid" style="bottom: 25px;">
   </header>
 <!-- Creates the parameters for H4 -->
+<h4 style="background-color: e0ffff; font-size: 400%;"> The roots of research grow from human-centered thinking. </h4>
+<!-- Creates the parameters for H4 -->
   <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2024 </h4>
 <!-- PROJECT IMG. & DESC. GALLERY
   Creates an image gallery for project previews on the home page, including images with descriptions. -->
   <section id="images">
   <!-- PROJECT #1: CATA
   Creates a divider for CATA project content. -->
-    <div class="gallery">
-    <!-- Includes image for CATA project & defines sizing; Incorporates 'btn' class to trigger image background 
-    highlight & transition animations when hovering over the element with the mouse. -->
-      <img src="CATA.png" width="600" height="400" class="btn"></img>
-    <!-- Includes an image description that briefly lays out the project. -->
-      <div class="desc"> Our team conducted a usabiliy study on the CATA mobile website interface, identifying issues
-      in pass labeling, map functionality, and language usage. Recommendations for clearer pass labeling and enhanced
-      map functionality aim to improve user experience, effectiveness, and satisfaction. Associated with Michigan State
-      University - User Experience graduate program. </div>
-    </div>
-  <!-- PROJECT #2:  
+    <div class="subject">
+      <div class="gallery">
+        <!-- Includes image for CATA project & defines sizing; Incorporates 'btn' class to trigger image background 
+        highlight & transition animations when hovering over the element with the mouse. -->
+        <img src="CATA.png" width="600" height="400" class="btn"></img>
+        <!-- Includes an image description that briefly lays out the project. -->
+        <div class="desc"> Our team conducted a usabiliy study on the CATA mobile website interface, identifying issues
+        in pass labeling, map functionality, and language usage. Recommendations for clearer pass labeling and enhanced
+        map functionality aim to improve user experience, effectiveness, and satisfaction. Associated with Michigan State
+        University - User Experience graduate program. </div>
+      </div>
+  <!-- PROJECT #2 
   Creates a divider for P2 project content. 
   Includes image for P2 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
-    <div class="gallery">
-      <img src="picture.png" width="400" height="200" class="btn"></img>
-      <div class="desc"> Add a description of the image here. </div>
+      <div class="gallery">
+        <!-- Includes image for  project & defines sizing; Incorporates 'btn' class to trigger image background 
+        highlight & transition animations when hovering over the element with the mouse. -->
+        <img src="picture.png" width="400" height="200" class="btn"></img>
+        <!-- Includes an image description that briefly lays out the project. -->
+        <div class="desc"> Description </div>
+      </div>
     </div>
 <!-- Creates the parameters for H4 -->
 <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2023 </h4>
@@ -84,10 +92,15 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Includes image for P3 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
+  <div class="subject">
     <div class="gallery">
+      <!-- Includes image for  project & defines sizing; Incorporates 'btn' class to trigger image background 
+      highlight & transition animations when hovering over the element with the mouse. -->
       <img src="picture.png" width="400" height="200" class="btn"></img>
-      <div class="desc"> Add a description of the image here. </div>
-    </div>
+      <!-- Includes an image description that briefly lays out the project. -->
+      <div class="desc"> Description </div>
+      </div>
+  </div>
 <!-- Creates the parameters for H4 -->
 <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> Past projects </h4>
   <!-- PROJECT #4:
@@ -95,6 +108,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Includes image for P4 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
+  <div class="subject">
     <div class="gallery">
       <img src="IRB.png" width="800" height="400" class="btn"></img>
       <div class="desc"> Our IRB-approved research project investigated the correlation between intersectional 
@@ -104,6 +118,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
       between identity and mental health outcomes during times of crisis, contributing valuable knowledge to the field of 
       mental health research. Associated with Seattle University - Psychology undergraduate program.</div>
     </div>
+  </div>
   </section>
 <!-- PAGE DIVIDER
 Adds a solid-line page divider to the home page. -->
