--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   </header>
   <!-- H4
   Creates the parameters for H4 -->
-  <h4 style="background-color: e0ffff; font-size: 400%;"> Reach out - we want to hear you. </h4>
+  <h4 style="background-color: e0ffff; font-size: 400%;"> Reach out - I want to hear you. </h4>
   <!-- CONTACT FORM
   Creates a contact form including text inputs for the first and last name, and drop-down selection menu for location. -->
   <div style="font-family: 'Poppins', sans-serif;">
@@ -152,7 +152,7 @@ Adds a solid-line page divider to the home page. -->
     Tel Aviv<br>
     Israel
   </address>
-  <button id="time;" type="button;" style="font-weight: bold;"
+  <button id="time;" type="button;"
     onclick="document.getElementById('demo').innerHTML = Date()">
       What time is it?
   </button>
