--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Adds a solid-line page divider to the home page. -->
     Tel Aviv<br>
     Israel
   </address>
-  <button id="time;" type="button;" style="font-weight: bold;"
+  <button id="time;" type="button;"
     onclick="document.getElementById('demo').innerHTML = Date()">
       What time is it?
   </button>
