--- a/index.html
+++ b/index.html
@@ -55,13 +55,17 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
 <!-- Creates the parameters for H4 -->
 <h4 style="background-color: e0ffff; font-size: 400%;"> The roots of research grow from human-centered thinking. </h4>
 <!-- Creates the parameters for H4 -->
-  <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2024 </h4>
+  <h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> '23 - '24 </h4>
 <!-- PROJECT IMG. & DESC. GALLERY
   Creates an image gallery for project previews on the home page, including images with descriptions. -->
   <section id="images">
   <!-- PROJECT #1: CATA
   Creates a divider for CATA project content. -->
     <div class="subject">
+      <div class="desc">
+        <h2 style="font-size: 150%; font-weight: bold;">Capital Area Transportation Authority mobile review & re-design </h2>
+        <h5 style="font-size: 150%;">Nov. 2023 - Apr. 2024</h5>
+      </div>
       <div class="gallery">
         <!-- Includes image for CATA project & defines sizing; Incorporates 'btn' class to trigger image background 
         highlight & transition animations when hovering over the element with the mouse. -->
@@ -77,6 +81,10 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
   Includes image for P2 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
+  <div class="desc">
+    <h2 style="font-size: 150%; font-weight: bold;">Project Title</h2>
+    <h5 style="font-size: 150%;">Feb. 2023 - Nov. 2023</h5>
+  </div>
       <div class="gallery">
         <!-- Includes image for  project & defines sizing; Incorporates 'btn' class to trigger image background 
         highlight & transition animations when hovering over the element with the mouse. -->
@@ -86,13 +94,17 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
       </div>
     </div>
 <!-- Creates the parameters for H4 -->
-<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> 2023 </h4>
+<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> '22 - '23 </h4>
   <!-- PROJECT #3:
   Creates a divider for P3 project content. 
   Includes image for P3 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
   <div class="subject">
+    <div class="desc">
+      <h2 style="font-size: 150%; font-weight: bold;">Project Title</h2>
+      <h5 style="font-size: 150%;">June 2022 - Feb. 2023</h5>
+    </div>
     <div class="gallery">
       <!-- Includes image for  project & defines sizing; Incorporates 'btn' class to trigger image background 
       highlight & transition animations when hovering over the element with the mouse. -->
@@ -102,13 +114,17 @@ Creates a header including a navigation bar alongside a primary title/H1 and an 
       </div>
   </div>
 <!-- Creates the parameters for H4 -->
-<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> Past projects </h4>
+<h4 style="background-color: e0ffff; font-size: 400%; float: left; font-weight: bold;"> '20 - '21 </h4>
   <!-- PROJECT #4:
   Creates a divider for P4 project content. 
   Includes image for P4 project & defines sizing.
   Incorporates 'btn' class to trigger image background highlight animations when hovering with a mouse. 
   Includes project description for project. -->
   <div class="subject">
+    <div class="desc">
+      <h2 style="font-size: 150%; font-weight: bold;">Identity & Anxiety Throughout the COVID-19 Pandemic (2021)</h2>
+      <h5 style="font-size: 150%;">Mar. 2021 - June 2022</h5>
+    </div>
     <div class="gallery">
       <img src="IRB.png" width="800" height="400" class="btn"></img>
       <div class="desc"> Our IRB-approved research project investigated the correlation between intersectional 
